# urho3d-blender-runtime-ver2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.sh  compile_linux.sh  compile_windows.sh
CMake/: project_options.h.in
android/launcher-app/: CMakeLists.txt  build.gradle.kts
android/launcher-app/src/main/: AndroidManifest.xml
android/launcher-app/src/main/assets/: CoreData.pak  Data.pak  EditorData.pak
android/launcher-app/src/main/java/com/github/urho3d/launcher/: MainActivity.kt
cmake/: Addons.cmake  project_options.h.in
raw/: materials.json  scene.blend  scene.blend1
script/: .build-options  .env-file  __originial_dockerized.sh  android_packRes_clearbuild_build_copy.sh  cmake_linux.sh  docker_build.sh  dockerized.sh
src/: BlenderRuntime.cpp  BlenderRuntime.h  GameLogic.cpp  GameLogic.h  StartupApplication.cpp  StartupApplication.h  ViewRenderer.cpp  ViewRenderer.h  gamelogic.cpp  gamelogic.h  thegame.cpp  thegame.h
src/Components/: ComponentsActivator.h  GroupInstance.cpp  GroupInstance.h  LookToMoveDirection.cpp  LookToMoveDirection.h  ParentBone.cpp  ParentBone.h  PlayAnimation.cpp  PlayAnimation.h  RenderData.cpp  RenderData.h  RotationFix.cpp  RotationFix.h  Rotator.h
src/LoaderTools/: ComponentExporter.cpp  ComponentExporter.h  base64.h
src/Subsystems/: BlenderNetwork.cpp  BlenderNetwork.h  BlenderNetworkEvents.h  Editor.cpp  Editor.h  PackageTool.cpp  PackageTool.h
src/Subsystems/LoaderTools/: ComponentExporter.cpp  ComponentExporter.h
src/gameComponents/: ComponentsActivator.h  GroupInstance.cpp  GroupInstance.h  ParentBone.h  RotationFix.h  Rotator.cpp  Rotator.h
src/gameSubsystems/: Editor.cpp  Editor.h
tools/: build_all.sh  build_linux.sh  build_win_lin.sh  build_windows.sh  compile_all.sh  compile_linux.sh  compile_windows.sh  export_game.sh  package_folder.sh  sign_apk.sh
tools/Dockerimages/: Dockerfile-Android  Dockerfile-Linux  Dockerfile-Mingw  Dockerfile-Native  Dockerfile-Web  Dockerfile-Windows  Dockerfile-android  Dockerfile-arm  Dockerfile-arm-update  Dockerfile-linux  Dockerfile-linux-update  Dockerfile-mingw  Dockerfile-mingw-update  Dockerfile-rpi  Dockerfile-rpi-update  Dockerfile-web  Dockerfile-web-update  build-images.sh  go_into_dockerimage.sh  test.sh
tools/Dockerimages/android/: root_entrypoint.sh  settings.gradle.kts
